# movie-mix-util

./: .gitignore  API_REFERENCE.md  EXAMPLES.md  README.md  TODO.md  __init__.py  advanced_video_concatenator.py  deferred_concat.py  example_increase_crossfade.py  example_overlay_crossfade.py  frame_overlap_test.py  integration_test.py  main.py  manual_test.py  pyproject.toml  run_tests.py  video_concatenator.py  video_mixer.py  video_processing_lib.py
.claude/: settings.local.json
examples/: cat_movies.py  cat_movies2.py  example_increase_crossfade.py  example_overlay_crossfade.py  mix_and_cat.py  movie_mix.py
hwaccel-benchmark/: README.md  hwaccel_research_report.txt  implementation_recommendations.md  platform_hwaccel_research.py  quick_hwaccel_analysis.py  test_hwaccel_verification.py  test_realistic_hwaccel.py
src/movie_mix_util/: __init__.py  advanced_video_concatenator.py  deferred_concat.py  video_processing_lib.py
tests/: README.md  conftest.py  test_advanced_concatenator.py  test_deferred_concat.py  test_integration_real_videos.py  test_video_mixer.py  test_video_processing_lib.py
