[project]
name = "movie-mix-util"
version = "1.3.1"
description = "Modern video processing, composition, and concatenation library with crossfade effects"
readme = "README.md"
authors = [
    {name = "movie-mix-util project", email = "noreply@example.com"}
]
license = {text = "MIT"}
keywords = ["video", "processing", "ffmpeg", "crossfade", "concatenation", "movie", "editing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "pillow>=11.3.0",
]

[project.scripts]
movie-mix-util = "movie_mix_util.advanced_video_concatenator:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["src/movie_mix_util"]

[tool.hatch.build.targets.wheel]
packages = ["src/movie_mix_util"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.2",
    "pytest-cov>=6.3.0",
    "ruff>=0.12.12",
]